templating engine used and location api used

--- a/static/index.html
+++ b/static/index.html
@@ -5,30 +5,17 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>home</title>
     <link rel="stylesheet" href="./styles/style.css">
     <script href="./scripts/script.js" defer></script>
-    <title>Inloggen</title>
     <link rel="stylesheet" href="https://use.typekit.net/lsm3ztk.css">
     <link rel="stylesheet" href="https://use.typekit.net/lsm3ztk.css">
 </head>
 
 <body>
-    <header>
-        <a href="./zero_state.html">
-            <img src="./images/back.png" alt="" href="./zero_state.html">
-            <p>terug</p>
-        </a>
-        <h1>Inloggen</h1>
-    </header>
-    <main>
-        <form method="post" action="">
-            <label for="email">Email</label>
-            <input id="email" type="email" name="email" placeholder="email">
-            <label for="password">Wachtwoord</label>
-            <input id="password" type="password" name="password" placeholder="wachtwoord">
-            <input type="submit" value="inloggen">
-            <a href="#">wachtwoord vergeten</a>
-        </form>
+    <main class="zero_state">
+        <a href="registreren.html">Registreren</a>
+        <a href="inloggen.html">Inloggen</a>
     </main>
 </body>
 
