--- a/static/index.html
+++ b/static/index.html
@@ -7,9 +7,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>home</title>
     <link rel="stylesheet" href="./styles/style.css">
-    <script href="./scripts/script.js" defer></script>
     <link rel="stylesheet" href="https://use.typekit.net/lsm3ztk.css">
-    <link rel="stylesheet" href="https://use.typekit.net/lsm3ztk.css">
+    <script src="./scripts/script.js" defer></script>
 </head>
 
 <body>
