--- a/static/inloggen.html
+++ b/static/inloggen.html
@@ -5,11 +5,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./styles/style.css">
-    <script href="./scripts/script.js" defer></script>
     <title>Inloggen</title>
+    <link rel="stylesheet" href="./styles/style.css">
     <link rel="stylesheet" href="https://use.typekit.net/lsm3ztk.css">
-    <link rel="stylesheet" href="https://use.typekit.net/lsm3ztk.css">
+    <script href="./scripts/script.js" defer></script>
 </head>
 
 <body>
@@ -21,11 +20,11 @@
         <h1>Inloggen</h1>
     </header>
     <main>
-        <form method="post" action="">
+        <form method="post" action="/inloggen">
             <label for="email">Email</label>
-            <input id="email" type="email" name="email" placeholder="email">
+            <input id="email" type="email" name="email" placeholder="email" required>
             <label for="password">Wachtwoord</label>
-            <input id="password" type="password" name="password" placeholder="wachtwoord">
+            <input id="password" type="password" name="password" placeholder="wachtwoord" minlength="8" required>
             <input type="submit" value="inloggen">
             <a href="#">wachtwoord vergeten</a>
         </form>
