--- a/static/registreren.html
+++ b/static/registreren.html
@@ -22,13 +22,13 @@
     <main>
         <form method="post" action="/registreren">
             <label for="fname">voornaam</label>
-            <input type="text" name="fname" id="fname" placeholder="voornaam">
+            <input type="text" name="fname" id="fname" placeholder="voornaam" required>
             <label for="lname">achternaam</label>
-            <input type="text" name="lname" id="lname" placeholder="achternaam">
+            <input type="text" name="lname" id="lname" placeholder="achternaam" required>
             <label for="email">email</label>
-            <input type="email" name="email" id="email" placeholder="email">
+            <input type="email" name="email" id="email" placeholder="email" required>
             <label for="password">wachtwoord</label>
-            <input type="password" name="password" id="password" minlength="8" placeholder="wachtwoord">
+            <input type="password" name="password" id="password" minlength="8" placeholder="wachtwoord" required>
             <input type="hidden" name="longitude" id="longitude">
             <input type="hidden" name="latitude" id="latitude">
             <input type="submit" value="registreren">
