--- a/static/index.html
+++ b/static/index.html
@@ -9,12 +9,42 @@
     <link rel="stylesheet" href="./styles/style.css">
     <link rel="stylesheet" href="https://use.typekit.net/lsm3ztk.css">
     <script src="./scripts/script.js" defer></script>
+    <script src="https://kit.fontawesome.com/bbfcff19bf.js" crossorigin="anonymous"></script>
 </head>
 
 <body>
-    <main class="zero_state">
-        <a href="registreren.html">Registreren</a>
-        <a href="inloggen.html">Inloggen</a>
+    <main>
+        <section>
+            <section>
+                <a href="#" id="links" class="button"><i class="fa-sharp fa-solid fa-circle-left fa-2xl"></i></a>
+                <div class="slider">
+                    <article id="slide-1">
+                        <!-- images from: https://undraw.co/illustrations -->
+                        <img src="./images/undraw_mobile_login_re_9ntv.svg" alt="login illustratie op een telefoon">
+                        <p>1. maak een account aan</p>
+                    </article>
+                    <article id="slide-2">
+                        <img src="./images/undraw_swipe_re_vhc5.svg" alt="swipen van mensen">
+                        <p>2. zoek een match op basis van slechte eigenschappen</p>
+                    </article>
+                    <article id="slide-3">
+                        <img src="./images/undraw_coffee_with_friends_3cbj.svg" alt="met vrienden afspreken">
+                        <p>3. spreek met elkaar af</p>
+                    </article>
+                </div>
+                <a href="#" id="rechts" class="button"><i class="fa-solid fa-circle-right fa-2xl"></i></a>
+            </section>
+            <section>
+                <a href="#slide-1">1</a>
+                <a href="#slide-2">2</a>
+                <a href="#slide-3">3</a>
+            </section>
+        </section>
+
+        <div class="zero_state">
+            <a href="registreren.html">Registreren</a>
+            <a href="inloggen.html">Inloggen</a>
+        </div>
     </main>
 </body>
 
