remove class zero state

--- a/static/index.html
+++ b/static/index.html
@@ -41,7 +41,7 @@
             </section>
         </section>
 
-        <div class="zero_state">
+        <div>
             <a href="registreren.html">Registreren</a>
             <a href="inloggen.html">Inloggen</a>
         </div>
