change route names

--- a/static/index.html
+++ b/static/index.html
@@ -42,8 +42,8 @@
         </section>
 
         <div>
-            <a href="registreren.html">Registreren</a>
-            <a href="inloggen.html">Inloggen</a>
+            <a href="/registreren">Registreren</a>
+            <a href="/inloggen">Inloggen</a>
         </div>
     </main>
 </body>
