--- a/static/inloggen.html
+++ b/static/inloggen.html
@@ -20,7 +20,7 @@
         <h1>Inloggen</h1>
     </header>
     <main>
-        <form method="post" action="/inloggen">
+        <form method="post" action="/profiel">
             <label for="email">Email</label>
             <input id="email" type="email" name="email" placeholder="email" required>
             <label for="password">Wachtwoord</label>
