--- a/static/registreren.html
+++ b/static/registreren.html
@@ -20,7 +20,7 @@
         <h1>Registreren</h1>
     </header>
     <main>
-        <form method="post" action="/registreren">
+        <form method="post" action="/profiel_aanmaken">
             <label for="fname">voornaam</label>
             <input type="text" name="fname" id="fname" placeholder="voornaam" required>
             <label for="lname">achternaam</label>
